<resources>
    <string name="app_name">WAFFLE</string>
    <string name="app_exist">한번 더 누르면 앱이 종료됩니다.</string>

    <!--tab menu-->
    <string name="tab1_menu_txt">내 주변</string>
    <string name="tab2_menu_txt">HOT</string>
    <string name="tab3_menu_txt">이슈</string>
    <string name="tab4_menu_txt">나의 맛집</string>
    <string name="tab5_menu_txt">더 보기</string>

    <!-- tab1 -->
    <string name="tab1_title_txt">내 주변 카페</string>
    <string name="tab1_sub_txt">GPS를 켜면 내 주변 카페들을 가까운 순으로 보여줍니다.</string>

    <!--error-->
    <string name="network_error_txt">네트워크 연결상태를 확인해주세요.</string>
    <string name="permission_error_txt">퍼미션을 허용해야 이용할 수 있습니다.</string>
    <!--cafe info-->
    <string name="cafe_info_weekdays_time_txt">주중 : </string>
    <string name="cafe_info_weekend_time_txt">주말 : </string>
    <string name="cafe_open_state_txt">OPEN</string>
    <string name="cafe_close_state_txt">CLOSE</string>

    <!--intro -->
    <string name="email_register_btn_txt">이메일로 가입</string>
    <string name="email_login_btn_txt">이메일로 로그인</string>
    <string name="facebook_login_txt">페이스북으로 간편 로그인</string>
    <string name="intro_sub_title_txt">카페 및 디저트 맛집, WAFFLE</string>
    <string name="intro_sub_help_txt">가입과 함께 WAFFLE의 이용약관, 개인정보취급방침,\n위치기반서비스 이용약관에 동의하시게 됩니다.</string>

    <!--Register-->
    <string name="email_register_title_txt">이메일로 가입</string>
    <string name="email_edit_box_hint_txt">이메일 주소</string>
    <string name="password_edit_box_hint_txt">비밀번호(8자 이상)</string>
    <string name="name_edit_box_hint_txt">이름(별명)</string>
    <string name="register_btn_txt">가입하기</string>
    <string name="register_error_input_email_txt">올바른 이메일 형식이 아닙니다.</string>
    <string name="error_not_exist_input_txt">정보를 입력해주세요.</string>
    <string name="register_error_input_pw_txt">비밀번호가 너무 짧습니다.</string>

    <!--Login-->
    <string name="email_login_title_txt">이메일로 로그인</string>
    <string name="login_email_edit_box_hint_txt">이메일 주소</string>
    <string name="login_password_edit_box_hint_txt">비밀번호</string>
    <string name="login_btn_txt">로그인하기</string>

    <!--Logout-->
    <string name="logout_title_txt">로그아웃</string>
    <string name="logout_sub_txt">정말 로그아웃하시겠습니까?</string>

    <!--tab5-->
    <string name="menu1_txt">프로필 수정</string>
    <string name="menu2_txt">와플 앱 평가하기</string>
    <string name="menu3_txt">맛집 등록하기</string>
    <string name="help1_txt">이용약관</string>
    <string name="help2_txt">개인정보 취급 방침</string>
    <string name="help3_txt">버전 정보</string>
    <string name="logout_btn_txt">로그아웃</string>

    <!--about_cafe-->
    <string name="comment_btn_txt">리뷰작성</string>
    <string name="kakao_share_btn_txt">카톡공유</string>
    <string name="share_btn_txt">공유하기</string>
    <string name="about_cafe_open_txt">주중</string>
    <string name="about_cafe_close_txt">주말</string>
    <string name="about_cafe_main_desert_txt">대표 음료 및 디저트</string>
    <string name="about_cafe_go_menu_btn">전체 보기</string>
    <string name="about_cafe_empty_comment_txt">등록된 리뷰가 없습니다.</string>
    <string name="about_cafe_review_title_txt">WAFFLE 리뷰</string>
    <string name="about_cafe_go_comment_btn">전체 보기</string>

    <!--my favorite cafe-->
    <string name="my_favorite_cafe_activity_title_txt">내가 좋아요한 맛집</string>
    <string name="my_favorite_cafe_activity_empty_txt">좋아요한 맛집이 없습니다.</string>
    <!--my comment cafe-->
    <string name="my_comment_cafe_activity_title_txt">내가 평가한 리뷰</string>
    <string name="my_comment_cafe_activity_empty_txt">평가한 리뷰가 없습니다.</string>

    <!--write comment-->
    <string name="write_comment_activity_title_txt">리뷰 쓰기</string>
    <string name="write_comment_activity_edit_box_hint_txt">리뷰를 작성해 주세요.(150자 이내)</string>
    <string name="write_comment_activity_error_empty_comment_txt">내용을 입력해주세요.</string>

    <!--edit user profile-->
    <string name="edit_user_profile_title_txt">나의 프로필</string>
    <string name="edit_user_profile_email_txt">이메일</string>
    <string name="edit_user_profile_change_pw_txt">비밀번호 변경</string>
    <string name="edit_user_profile_name_txt">이름</string>
    <string name="edit_user_profile_intro_txt">자기소개</string>
    <string name="edit_user_profile_save_txt">저장</string>

    <!--tab4-->
    <string name="tab4_my_favorite_cafe_title">내가 좋아요한 맛집</string>
    <string name="tab4_my_comment_cafe_title">내가 평가한 리뷰</string>

    <!--tab2-->
    <string name="tab2_recommend_cafe_title_txt">이런 카페는 어때요?</string>
    <string name="tab2_comment_title_txt">WAFFLE, NOW</string>

    <!--All Comment Activity-->
    <string name="all_comment_activity_title_txt">WAFFLE, NOW</string>

    <!--Share Bottom Sheet-->
    <string name="share_bottom_sheet_cancel_txt">취소</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_all_comment">AllCommentActivity</string>
</resources>
