<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="view.IntroActivity">

    <RelativeLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="130dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/app_logo"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="35dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:text="@string/intro_sub_title_txt"
                android:textSize="15dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/facebook_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/intro_facebook_btn_shape"
                android:textColor="@color/colorWhite"
                android:text="@string/facebook_login_txt"/>
            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/facebook_btn"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorSky"
                    android:background="@drawable/intro_register_btn_shape"
                    android:text="@string/email_register_btn_txt"/>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/intro_login_btn_shape"
                    android:text="@string/login_btn_txt"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="13dp"
                android:layout_marginTop="10dp"
                android:text="@string/intro_sub_help_txt"
                android:layout_below="@+id/login_layout"
                android:gravity="center_horizontal"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
