<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    tools:context="view.EmailRegisterActivity">

    <RelativeLayout
        android:id="@+id/app_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/back_btn_img"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_register_title_txt"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"/>
    </RelativeLayout>
    <!--구분선-->
    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        android:layout_below="@+id/app_title_bar"
        android:background="#9E9E9E"></LinearLayout>

    <!--이메일 주소, 비밀번호, 이름(별명)-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/divider">

        <EditText
            android:id="@+id/email_edit_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorWhite"
            android:hint="@string/email_edit_box_hint_txt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15dp"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColorHint="@color/colorTextHintGray"/>

        <EditText
            android:id="@+id/email_password_edit_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorWhite"
            android:hint="@string/password_edit_box_hint_txt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15dp"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:textColorHint="@color/colorTextHintGray"/>
        
        <EditText
            android:id="@+id/name_edit_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorWhite"
            android:hint="@string/name_edit_box_hint_txt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:textColorHint="@color/colorTextHintGray"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/register_btn_txt"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSky"
            android:layout_marginLeft="15dp"
            android:textSize="16dp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

</RelativeLayout>
