<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.yssh.waffle.MainActivity">

    <RelativeLayout
        android:id="@+id/app_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </RelativeLayout>
    <!--구분선-->
    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        android:layout_below="@+id/app_title_bar"
        android:background="#9E9E9E"></LinearLayout>

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/divider">
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/bottom_tab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FAFAFA"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/menu_layout"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/tab_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/tab1_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:id="@+id/tab1_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab1_menu_txt"
                    android:textSize="11dp"
                    android:layout_below="@+id/tab1_img"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/tab2_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:id="@+id/tab2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab2_menu_txt"
                    android:textSize="11dp"
                    android:layout_below="@+id/tab2_img"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/tab3_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:id="@+id/tab3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab3_menu_txt"
                    android:textSize="11dp"
                    android:layout_below="@+id/tab3_img"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/tab4_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:id="@+id/tab4_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab4_menu_txt"
                    android:textSize="11dp"
                    android:layout_below="@+id/tab4_img"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/tab5_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:id="@+id/tab5_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab5_menu_txt"
                    android:textSize="11dp"
                    android:layout_below="@+id/tab5_img"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <!--구분선-->
    <LinearLayout
        android:id="@+id/tab_menu_divider"
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/bottom_tab_menu"
        android:background="#9E9E9E"></LinearLayout>

</RelativeLayout>
