<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="55dp"
    tools:context="view.TabFragment1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_profile_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/user_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/user_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorGray"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"/>
    </LinearLayout>
    <!--구분선-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        android:background="#E0E0E0"></LinearLayout>

    <!--메뉴들...(프로필 수정, 와플 앱 평가하기, 맛집 등록 신청하기, 이용약관, 개인정보 취급 정책, 버전정보, 로그아웃-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_profile_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/tab5_user_profile_img"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/menu1_txt"
                android:textColor="#37474F"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>
        <LinearLayout
            android:id="@+id/recommend_waffle_app_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/tab5_recommend_img"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/menu2_txt"
                android:textColor="#37474F"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>
        <LinearLayout
            android:id="@+id/register_cafe_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/tab5_register_cafe_img"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/menu3_txt"
                android:textColor="#37474F"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>

        <LinearLayout
            android:id="@+id/app_help1_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/help1_txt"
                android:textColor="@color/colorTextHintGray"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>
        <LinearLayout
            android:id="@+id/app_help2_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/help2_txt"
                android:textColor="@color/colorTextHintGray"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>
        <LinearLayout
            android:id="@+id/app_help3_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/help3_txt"
                android:textColor="@color/colorTextHintGray"/>
        </LinearLayout>
        <!--구분선-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#E0E0E0"></LinearLayout>
        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/tab5_logout_btn_shape"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"
            android:text="@string/logout_btn_txt"/>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
